[package]
name = "hybrid-web-grpc-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", default-features = false }
hyper = { version = "0.14.16", features = ["server", "tcp", "http1",  "http2"], default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["macros", "rt-multi-thread"] }
